fix img align-self

--- a/css/t2.css
+++ b/css/t2.css
@@ -1,18 +1,13 @@
 .people_list{
     display: grid;
-    grid-template-columns: 47px 1fr;
-    grid-template-rows: repeat(10, 75px) ;
-    column-gap: 1.4rem;
-    /*row-gap: 2rem;*/
-    row-gap: 50px;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: repeat(10, 1fr) ;
+    column-gap: 1rem;
+    row-gap: 1.8rem;
 }
 
 .people_list img{
     max-height: 100%;
     justify-self: center;
-    align-self: end;
+    align-self: center;
 }
-/*colapse margin*/
-/*.person_description p, strong{*/
-/*    margin: 2rem 0;*/
-/*}*/
